--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
     "framer-motion": "^6.3.0",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
